feat(*): Add page to show latest thread
Add page to show latest thread:
* Add page LatestThreadPage.
* Extension on String that parsing to route now returns
  `RecognizedRoute` if route is supported.
* Add `LatestThread` model, it's similar to `MyThread` and need refator
  to a thread standard model in future.
* Add extensio on `Map<String, String>` that returns a new Map combines
  two map together.
* Add new card layout `LatestThreadCard`.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -201,6 +201,9 @@
       "title": "ReplyThread"
     }
   },
+  "latestThreadPage": {
+    "title": "Latest Thread"
+  },
   "forumCard": {
     "links": "Links",
     "subForums": "Subreddit"
