--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -201,6 +201,9 @@
       "title": "回覆"
     }
   },
+  "latestThreadPage": {
+    "title": "最新主題"
+  },
   "forumCard": {
     "links": "連結",
     "subForums": "子版塊"
