--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -229,16 +229,22 @@
     "unlucky": "衰"
   },
   "lockedCard": {
-    "title": "部分內容需要購買才可瀏覽",
-    "purchasedInfo": "$num 人已購買此帖子",
-    "failedPurchase": "購買失敗",
-    "failedParsingPurchase": "解析購買資訊時失敗",
-    "failedPurchaseMessage": "購買失敗: $message",
-    "failedParsingConfirmInfo": "解析購買确认資訊時失敗",
-    "confirmPurchase": "確認購買",
-    "confirmInfo": "从 $author 处以 $price 個天使幣的价格帖子。\n作者會得到 $authorProfit 個天使幣。\n購買后你還有 $coinsLast 個天使幣。",
-    "successPurchase": "購買成功",
-    "successPurchaseInfo": "即將重新整理頁面"
+    "points": {
+      "title": "部分內容要求積分足夠才可見",
+      "detail": "需要 $requiredPoints 積分，但你只有 $points 積分"
+    },
+    "purchase": {
+      "title": "部分內容需要購買才可瀏覽",
+      "purchasedInfo": "$num 人已購買此帖子",
+      "failedPurchase": "購買失敗",
+      "failedParsingPurchase": "解析購買資訊時失敗",
+      "failedPurchaseMessage": "購買失敗: $message",
+      "failedParsingConfirmInfo": "解析購買确认資訊時失敗",
+      "confirmPurchase": "確認購買",
+      "confirmInfo": "从 $author 处以 $price 個天使幣的价格帖子。\n作者會得到 $authorProfit 個天使幣。\n購買后你還有 $coinsLast 個天使幣。",
+      "successPurchase": "購買成功",
+      "successPurchaseInfo": "即將重新整理頁面"
+    }
   },
   "rateCard": {
     "title": "評分記錄（$userCount）",
