feat(*): Support parsing post section locked with reply

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -244,6 +244,10 @@
       "confirmInfo": "Purchase from $author with is price $price.\nThe author will get $authorProfit coins.\nYou will have $coinsLast coins left after purchase",
       "successPurchase": "Purchase success",
       "successPurchaseInfo": "Will refresh this page"
+    },
+    "reply": {
+      "title": "Some content requires reply",
+      "detail": "Reply to see contents here"
     }
   },
   "rateCard": {
