feat(ui): Show thread id and thread type in thread page

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -148,6 +148,7 @@
     }
   },
   "threadPage": {
+    "title": "Thread",
     "sendReplyHint": "Reply...",
     "sendReply": "Reply",
     "replySuccess": "Reply success",
