feat(*): Munch spoiler div in html document
Munch spoiler div in html document:
* Use `SpoilerCard` to control and display an area of expand more/less
  area in html document `<div class="spoiler">` nodes.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -263,5 +263,9 @@
   },
   "codeCard": {
     "title": "Code Block"
+  },
+  "spoilerCard": {
+    "expandMore": "Expand More",
+    "expandLess": "Expand Less"
   }
 }
