feat(ui): Parse pinned thread in forum

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -138,6 +138,10 @@
     "checkInTodayStatus": "Check-in Today Status"
   },
   "forumPage": {
+    "stickThreadTab": {
+      "title": "Pinned",
+      "noThread": "No Pinned Thread"
+    },
     "threadTab": {
       "title": "Thread",
       "noThread": "No Thread"
