--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -155,6 +155,7 @@
     "title": "Thread",
     "sendReplyHint": "Reply...",
     "sendReply": "Reply",
+    "closed": "Thread is closed",
     "replySuccess": "Reply success",
     "replyFailed": "Failed to reply: $err"
   },
