--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -155,6 +155,7 @@
     "title": "帖子",
     "sendReplyHint": "回复",
     "sendReply": "发送",
+    "closed": "帖子已关闭",
     "replySuccess": "回复成功",
     "replyFailed": "回复失败：$err"
   },
