--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -155,6 +155,7 @@
     "title": "貼文",
     "sendReplyHint": "回覆",
     "sendReply": "傳送",
+    "closed": "貼文已關閉",
     "replySuccess": "回覆成功",
     "replyFailed": "回覆失敗：$err"
   },
