--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -59,7 +59,8 @@
     },
     "othersSection": {
       "title": "其他",
-      "about": "关于"
+      "about": "关于",
+      "upgrade": "获取新版"
     }
   },
   "aboutPage": {
@@ -75,6 +76,22 @@
     "dartVersion": "Dart版本",
     "license": "版权",
     "copiedToClipboard": "已复制到剪切板"
+  },
+  "upgradePage": {
+    "title": "更新@:appName",
+    "description": "检查并下载最新版本",
+    "currentVersion": "当前版本: $currentVersion",
+    "latestVersion": "最新版本: $latestVersion",
+    "releaseNotes": "更新记录",
+    "fetchingData": "获取中",
+    "download": "下载",
+    "savePath": "保存路径",
+    "storagePermissionNotGranted": "下载失败，因为未授予存储权限",
+    "saveTo": "保存到 $path",
+    "failedToDownloadDialog": {
+      "title": "下载失败",
+      "description": "没有找到适合当前系统的安装包"
+    }
   },
   "loginPage": {
     "title": "登录天使动漫",
