--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -60,7 +60,7 @@
     "othersSection": {
       "title": "其他",
       "about": "关于",
-      "upgrade": "获取新版"
+      "upgrade": "更新"
     }
   },
   "aboutPage": {
@@ -78,7 +78,7 @@
     "copiedToClipboard": "已复制到剪切板"
   },
   "upgradePage": {
-    "title": "更新@:appName",
+    "title": "更新",
     "description": "检查并下载最新版本",
     "currentVersion": "当前版本: $currentVersion",
     "latestVersion": "最新版本: $latestVersion",
