--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -60,7 +60,7 @@
     "othersSection": {
       "title": "其他",
       "about": "關於",
-      "upgrade": "取得新版"
+      "upgrade": "更新"
     }
   },
   "aboutPage": {
@@ -78,7 +78,7 @@
     "copiedToClipboard": "已複製到剪切板"
   },
   "upgradePage": {
-    "title": "更新@:appName",
+    "title": "更新",
     "description": "檢查並下載最新版本",
     "currentVersion": "目前版本: $currentVersion",
     "latestVersion": "最新版本: $latestVersion",
