--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -7,7 +7,8 @@
     "needLoginToSeeThisPage": "登入後才能存取此頁面",
     "pleaseWait": "請稍候",
     "loadFailedAndRetry": "載入失敗，正在重試",
-    "noMoreData": "已經到頭了"
+    "noMoreData": "已經到頭了",
+    "reset": "重置为默认值"
   },
   "navigation": {
     "homepage": "首頁",
@@ -35,6 +36,9 @@
         "light": "淺色",
         "system": "跟隨系統",
         "dark": "深色"
+      },
+      "colorScheme": {
+        "title": "色調"
       },
       "languages": {
         "title": "語言",
@@ -289,5 +293,8 @@
   "spoilerCard": {
     "expandMore": "展開",
     "expandLess": "折疊"
+  },
+  "colorPickerDialog": {
+    "title": "選擇顏色"
   }
 }
