refactor(authentication): Migrate to bloc - authentication

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -110,11 +110,12 @@
     "answerEmpty": "Answer should not be empty",
     "verifyCode": "Verification code",
     "verifyCodeEmpty": "Verification code should not be empty",
+    "securityQuestion": "Security Question",
     "failedToLoginStatusCode": "Failed to login: StatusCode=$code",
     "failedToLoginMessageNodeNotFound": "Failed to login: Message node not found",
     "loginResultSuccess": "Login success",
     "loginResultIncorrectCaptcha": "Incorrect verification code",
-    "loginResultMaybeInvalidUsernameOrPassword": "Maybe invalid username or password",
+    "loginResultIncorrectUsernameOrPassword": "Incorrect username or password",
     "loginResultIncorrectQuestionOrAnswer": "Incorrect login question or answer",
     "loginResultTooManyLoginAttempts": "Too many login attempts",
     "loginResultOtherErrors": "Other error",
