--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -110,11 +110,12 @@
     "answerEmpty": "安全问题的答案不能为空",
     "verifyCode": "验证码",
     "verifyCodeEmpty": "验证码不能为空",
+    "securityQuestion": "安全问题",
     "failedToLoginStatusCode": "登录失败: 状态码=$code",
     "failedToLoginMessageNodeNotFound": "登录失败: 未找到MessageNode",
     "loginResultSuccess": "登录成功",
     "loginResultIncorrectCaptcha": "验证码错误",
-    "loginResultMaybeInvalidUsernameOrPassword": "可能是由于用户名或密码错误",
+    "loginResultIncorrectUsernameOrPassword": "用户名或密码错误",
     "loginResultIncorrectQuestionOrAnswer": "安全问题或密码不正确",
     "loginResultTooManyLoginAttempts": "登录尝试次数过多",
     "loginResultOtherErrors": "其他错误",
