--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -110,11 +110,12 @@
     "answerEmpty": "安全問題的答案不能為空",
     "verifyCode": "驗證碼",
     "verifyCodeEmpty": "驗證碼不能為空",
+    "securityQuestion": "安全問題",
     "failedToLoginStatusCode": "登入失敗: 狀態碼=$code",
     "failedToLoginMessageNodeNotFound": "登入失敗: 未找到MessageNode",
     "loginResultSuccess": "登入成功",
     "loginResultIncorrectCaptcha": "驗證碼錯誤",
-    "loginResultMaybeInvalidUsernameOrPassword": "可能是因為使用者名稱或密碼錯誤",
+    "loginResultIncorrectUsernameOrPassword": "使用者名稱或密碼錯誤",
     "loginResultIncorrectQuestionOrAnswer": "安全性問題或密碼不正確",
     "loginResultTooManyLoginAttempts": "登入嘗試次數過多",
     "loginResultOtherErrors": "其他錯誤",
