--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -292,6 +292,9 @@
     "reply": {
       "title": "Some content requires reply",
       "detail": "Reply to see contents here"
+    },
+    "author": {
+      "title": "Only visible to the thread author"
     }
   },
   "rateCard": {
