feat(forum): Parse and show forum rules

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -163,6 +163,10 @@
     "checkinTodayStatus": "Check-in Today Status"
   },
   "forumPage": {
+    "rulesTab": {
+      "title": "Rules",
+      "noRules": "No rules to show"
+    },
     "stickThreadTab": {
       "title": "Pinned",
       "noThread": "No Pinned Thread"
