--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -326,5 +326,10 @@
     "rate": "评分",
     "rateFetchInfoFailed": "获取评分信息失败",
     "rateFailed": "评分失败"
+  },
+  "packetCard": {
+    "title": "你找到了一个红包！",
+    "open": "打开",
+    "failedToOpen": "打开失败"
   }
 }
