feat(packet): Parse packet status: all taken away

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -330,6 +330,7 @@
   "packetCard": {
     "title": "You found a packet!",
     "open": "Open It",
-    "failedToOpen": "Failed to open"
+    "failedToOpen": "Failed to open",
+    "allTakenAway": "All packets were taken away"
   }
 }
