--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -330,6 +330,7 @@
   "packetCard": {
     "title": "你找到一個紅包了！",
     "open": "開啟",
-    "failedToOpen": "打開失敗"
+    "failedToOpen": "打開失敗",
+    "allTakenAway": "红包都領完了"
   }
 }
