--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -324,6 +324,8 @@
   "postCard": {
     "reply": "Reply",
     "rate": "Rate",
+    "onlyViewAuthor": "Only view the author",
+    "viewAllAuthors": "View all authors",
     "rateFetchInfoFailed": "Fetch info failed",
     "rateFailed": "Rate failed"
   },
