--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -324,6 +324,8 @@
   "postCard": {
     "reply": "回复",
     "rate": "评分",
+    "onlyViewAuthor": "只看该作者",
+    "viewAllAuthors": "查看所有作者",
     "rateFetchInfoFailed": "获取评分信息失败",
     "rateFailed": "评分失败"
   },
