feat(thread): Support viewing posts in reversed order
Support viewing posts in reversed order:
* Note that the "reversed order" seems conflict with "only
  view specified user" on the server side on UI, but here
  do implement it by reserving both query parameters in thread
  url so there is no conflict any more. Different from the
  behavior in browser but it's ok, even better.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -259,7 +259,9 @@
     "actionRefresh": "Refresh",
     "actionCopyUrl": "Copy Url",
     "actionOpenInBrowser": "Open In Browser",
-    "actionBackToTop": "Back To Top"
+    "actionBackToTop": "Back To Top",
+    "actionForwardOrder": "Forward order",
+    "actionReverseOrder": "Reverse order"
   },
   "checkinForm": {
     "shouldMoreThan3": "Should more than 3",
