--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -259,7 +259,9 @@
     "actionRefresh": "刷新",
     "actionCopyUrl": "複製連結",
     "actionOpenInBrowser": "在瀏覽器中開啟",
-    "actionBackToTop": "回到頂部"
+    "actionBackToTop": "回到頂部",
+    "actionForwardOrder": "正序瀏覽",
+    "actionReverseOrder": "倒序瀏覽"
   },
   "checkinForm": {
     "shouldMoreThan3": "必須多於三個字",
