feat(forum): Support filtering threads
Support filtering threads by:
* Thread types.
* Thread special types.
* Thread active time (dateline).
* Sort thread order.
* Digested mark.
* Recommended mark.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -173,7 +173,13 @@
     },
     "threadTab": {
       "title": "Thread",
-      "noThread": "No Thread"
+      "noThread": "No Thread",
+      "threadType": "Types",
+      "threadSpecialType": "Special type",
+      "threadDateline": "Active time",
+      "threadOrder": "Order",
+      "threadDigested": "Digested",
+      "threadRecommended": "Recommended"
     },
     "subredditTab": {
       "title": "Subreddit",
