--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -51,6 +51,10 @@
       "showShortcutInForumCard": {
         "title": "論壇卡可跳轉",
         "detail": "論壇卡上顯示可跳到最新貼文和子板塊的零件"
+      },
+      "showUnreadInfoHint": {
+        "title": "未讀取訊息提示",
+        "detail": "有未讀訊息時訊息按鈕上顯示紅點或數量"
       }
     },
     "checkinSection": {
