feat(notification): Support parsing new friend notices

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -205,7 +205,8 @@
       "replyBody": "replied in $threadTitle",
       "rateBody": "scored your thread in $threadTitle $score",
       "mentionBody": "mentioned you in thread",
-      "inviteBody": "invite you to participate in the topic $threadTitle"
+      "inviteBody": "invite you to participate in the topic $threadTitle",
+      "newFriendBody": "became your friend"
     },
     "messageTab": {
       "title": "Messages"
