--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -205,7 +205,8 @@
       "replyBody": "在 $threadTitle 中回覆了",
       "rateBody": "在 $threadTitle 中給您的帖子評分 $score",
       "mentionBody": "在話題中提到了你",
-      "inviteBody": "邀請您參與話題 $threadTitle"
+      "inviteBody": "邀請您參與話題 $threadTitle",
+      "newFriendBody": "和您成為好友了"
     },
     "messageTab": {
       "title": "訊息"
