--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -11,7 +11,8 @@
     "pleaseWait": "请稍候",
     "loadFailedAndRetry": "加载失败，正在重试",
     "noMoreData": "已经到头了",
-    "reset": "重置为默认值"
+    "reset": "重置为默认值",
+    "more": "更多"
   },
   "navigation": {
     "homepage": "主页",
@@ -262,6 +263,16 @@
     "unknownAllowedRange": "无效的评分区间 $range",
     "onlyAllowIntegers": "只允许整数",
     "failedToRate": "评分失败"
+  },
+  "pointsPage": {
+    "title": "积分统计",
+    "statisticsTab": {
+      "title": "我的积分",
+      "recentChangelog": "近期积分记录"
+    },
+    "changelogTab": {
+      "title": "积分记录"
+    }
   },
   "forumCard": {
     "links": "链接",
