feat(thread): Add post group title in post list
* Add post group title.
* Fix lint error.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -12,7 +12,8 @@
     "loadFailedAndRetry": "Load failed, retrying",
     "noMoreData": "No more data",
     "reset": "Reset to default",
-    "more": "More"
+    "more": "More",
+    "pageIndex": "Page $index"
   },
   "navigation": {
     "homepage": "Home",
