--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -12,7 +12,8 @@
     "loadFailedAndRetry": "加载失败，正在重试",
     "noMoreData": "已经到头了",
     "reset": "重置为默认值",
-    "more": "更多"
+    "more": "更多",
+    "pageIndex": "第 $index 页"
   },
   "navigation": {
     "homepage": "主页",
