feat(bounty): Support thread bounty state and best answer
This commit add support for parsing and showing the bounty state of
thread (if any) and the related best answer content (if any).

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -365,5 +365,14 @@
     "open": "Open It",
     "failedToOpen": "Failed to open",
     "allTakenAway": "All packets were taken away"
+  },
+  "bountyCard": {
+    "title": "Bounty",
+    "price": "$price coins",
+    "resolved": "RESOLVED",
+    "processing": "PROCESSING"
+  },
+  "bountyAnswerCard": {
+    "title": "Best Answer"
   }
 }
