--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -208,7 +208,8 @@
       "rateBody": "scored your thread in $threadTitle $score",
       "mentionBody": "mentioned you in thread",
       "inviteBody": "invite you to participate in the topic $threadTitle",
-      "newFriendBody": "became your friend"
+      "newFriendBody": "became your friend",
+      "ignoredSameNotice": "$count more same notice ignored"
     },
     "messageTab": {
       "title": "Messages"
