feat(post): Allow edit published thread and post
This commit add support to edit publishd thread and post:
* Edit thread type/title/content.
* Edit post content.
* Configure additional options provided by server. Some options may
  require the text editor support which is not implement yet.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -294,7 +294,8 @@
     "threadTypeShouldNotBeEmpty": "Thread type should not be empty",
     "titleShouldNotBeEmpty": "Title should not be empty",
     "titleTooLong": "Title too long",
-    "threadBodyTooShort": "Thread body too short"
+    "threadBodyTooShort": "Thread body too short",
+    "editSuccess": "Edit success"
   },
   "forumCard": {
     "links": "Links",
