--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -209,7 +209,8 @@
       "mentionBody": "在帖子中提到了你",
       "inviteBody": "邀请您参与话题 $threadTitle",
       "newFriendBody": "和您成为了好友",
-      "ignoredSameNotice": "还有 $count 个相同通知被忽略"
+      "ignoredSameNotice": "还有 $count 个相同通知被忽略",
+      "taskID": "任务ID：$taskId"
     },
     "messageTab": {
       "title": "消息"
